--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
+  "name": "ticket-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^6.9.1",
+    "dotenv": "^16.0.3"
   }
 }
